# kernel_quantile_regression

./: .gitignore  README.md  comp_rolling.py  kqr_kernels_comp.py  kqr_tutorial.py  param.py  pyproject.toml  rolling_window.sh  temp.py  temp2.py  tempp.txt
Data/: temperatures_melbourne.csv
Data/CH/: CH_load.csv  temperature.csv  wind_speed.csv
Data/CH/2022/: CH_load.csv  temperature.csv  wind_speed.csv
Data/CH/clean/: ch.csv  ch_test.csv  ch_train.csv
Data/DE/2022/: DE_load.csv
Data/DE/2023/: DE_load.csv
Data/Load/: L-train.csv  L-weather-train.csv
Data/Price/: Instructions.txt
Data/SECURES-Met/: cleaner_load.py  cleaner_test.py  cleaner_train.py  clearner_test.py  clearner_train.py  df_creator.py  sec_met.py
plots/: box_ci.py  cv.ipynb  k_mat.ipynb  pinball_loss_plot.pptx  plot_ci.py  plots.py  utils.py  ~$pinball_loss_plot.pptx
plots/CH/: quantiles_plot.py
src/kernel_quantile_regression/: kqr.py
train_test/: scores.py
train_test/CH/: ch_point.py  ch_qr.py  ch_qr_test.py  comp.py  scores.csv  scores_full.csv
train_test/DE/: de_point.py  de_qr.py  de_qr_test.py  scores.csv  scores_full.csv
train_test/Load/: load_qr_gefcom2014.py  load_qr_gefcom2014_test.py  rest.sh
train_test/Price/: price_qr_gefcom2014.py  price_qr_gefcom2014_test.py  rest.sh
train_test/SECURES-Met/: scores.py  secures_qr.py  secures_qr_test.py
train_test/melbourne/: models_a_laplacian_gridsearch.csv  models_chi_squared_gridsearch.csv  models_gaussian_rbf_gridsearch.csv  models_linear_gridsearch.csv  models_matern_0.5_gridsearch.csv  models_matern_1.5_gridsearch.csv  models_matern_2.5_gridsearch.csv  models_periodic_gridsearch.csv  models_polynomial_gridsearch.csv  models_sigmoid_gridsearch.csv
train_test/rolling_window/: comp_rolling.py  kernel_rolling.py  rolling_window.sh
utils/: bash1.sh  load_create_test.py  load_create_train.py  load_weather_avg.py  miscellaneous.py  param.py  price_create_test.py  price_create_train.py  weather_prediction_avg.py
utils/CH/: ch_df.py  load_create.py  temp_create.py  wind_create.py
utils/DE/: de_df.py  load_create.py  temp_create.py  wind_create.py
(+9490 files in other folders)
